3085 fix spacing

--- a/source/css/scss/objects/_lists.scss
+++ b/source/css/scss/objects/_lists.scss
@@ -747,7 +747,7 @@ ol {
   border-color: $blue;
   border-width: 2px;
 
-  @media screen and (min-width: 768px) {
+  @include media-breakpoint-up( md ) {
     width: 150%;
   }
 
